--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,12 @@
               "src/styles.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              {
+                "input": "src/theme-md-dark-indigo.css",
+                "bundleName": "md-dark",
+                "inject": false
+              }
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
