--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
               }
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./src/mathjax-config.js"
             ]
           },
           "configurations": {
